# snap-sunbeam

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: build-and-test.yml
bundles/etc/bundles/: control-plane.yaml  states.json
configure/etc/configure/: README.md  main.tf  outputs.tf  variables.tf
doc/: debugging.md  requirements.txt
etc/: juju-models.yaml
resources/: controlplane.yaml
snap/: snapcraft.yaml
sunbeam/: __init__.py  config.py  hooks.py  log.py  main.py  utils.py
sunbeam/commands/: bootstrap.py  configure.py  crashdump.py  init.py  inspect.py  juju.py  microk8s.py  ohv.py  openrc.py  question_helper.py  reset.py  status.py
sunbeam/jobs/: checks.py  common.py  prompts.py
sunbeam/ohv_config/: client.py  config.py  service.py
sunbeam/snapd/: changes.py  client.py  service.py  snaps.py
tests/unit/sunbeam/: test_init.py  test_question_helper.py  test_utils.py
