[metadata]
name = sunbeam
summary = The simple way to build and manage your OpenStack Cloud.
description_file =
    README.md
author = Canonical
author_email = somebody@example.org
home_page = https://github.com/openstack-charmers/sunbeam
python_requires = >= 3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    sunbeam

[entry_points]
console_scripts =
    sunbeam = sunbeam.main:main

snaphelpers.hooks =
    configure = sunbeam.hooks:configure
    install = sunbeam.hooks:install
